feat(oftheday): remove images tab for v1.0.0

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -26,6 +26,8 @@
         </div>
       </div>
     </ion-tab>
+    <!--
+    TODO: Image settings disabled for v1.0.0 - implement
     <ion-tab title="Images" icon-on="ion-image" icon-off="ion-image">
       <div class="radioGroup">
         <label class="radioGroupLabel">Kittens</label>
@@ -44,6 +46,7 @@
         </div>
       </div>
     </ion-tab>
+    -->
     <ion-tab title="Reminder" icon-on="ion-clock" icon-off="ion-clock">
       <div class="radioGroup">
         <div style="float:left; margin-top:10px">
