--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -1,5 +1,25 @@
 .textSelect {
 }
+.textSelect .titleContainer {
+  text-align: center;
+  width: 100%;
+}
+.textSelect .title {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  margin-bottom: 15px;
+  font-family: 'notoserif-italic';
+  font-size: 1em;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  color: #339ee6;
+  border-color: #339ee6;
+}
 .textSelect .text {
   padding-top: 40px;  
   padding-bottom: 100px;
