--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -47,7 +47,7 @@
     <div class="popupButton" ng-class="{'pad':!mobileNumberValid()}"ng-click="contactCancelButtonClick()">Cancel</div>
   </gw-mob-popup>
   <!-- bottom bar -->
-  <div class="bottomBar" ng-if="textList && !endOfTextVisible() && bottomBarVisible">
+  <div class="bottomBar" ng-if="textList && !endOfTextVisible() && imageList && !endOfImageVisible() && bottomBarVisible">
     <!--TODO: Like button disabled for v1.0.0 - implement-->
     <!--<div class="likeDislikeButton icon ion-thumbsdown" ng-click="dislikeButtonClick()"></div>-->
     <div class="sendButton" ng-click="sendButtonClick()">Send</div>
