--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -11,9 +11,9 @@
   </gw-mob-popup>
   <!-- sms image popup -->
   <gw-mob-popup class="textPopup" ng-if="smsImagePopupVisible">
-    <div>Cannot send image</div>
+    <div>SMS won't send the image</div>
     <div class="popupButton pad" ng-click="sendSMS()">Send Text Only</div>
-    <div class="popupButton" ng-click="sendEmail()">Send Email</div>
+    <div class="popupButton" ng-click="sendEmail()">Send by Email</div>
     <div class="popupButton" ng-click="sendCancelButtonClick()">Cancel</div>
   </gw-mob-popup>
   <!-- sent popup -->
