style(genderselect): change male/female text

--- a/src/app/genderselect/genderselect.part.html
+++ b/src/app/genderselect/genderselect.part.html
@@ -4,11 +4,11 @@
     <div class="genderContainer">
       <div class="genderBox">
         <div class="genderButton icon ion-male" ng-click="maleGenderClick()"></div>
-        <p class="genderLabel">Male</p>
+        <p class="genderLabel">A Man</p>
       </div>
       <div class="genderBox">
         <div class="genderButton icon ion-female" ng-click="femaleGenderClick()"></div>
-        <p class="genderLabel">Female</p>
+        <p class="genderLabel">A Woman</p>
       </div>
     </div>
   </ion-content>
