feat(welcometexts): change clear settings button to clear localstorage button

--- a/src/app/debug/debug.part.html
+++ b/src/app/debug/debug.part.html
@@ -8,7 +8,7 @@
     <ion-tab title="Misc" icon-on="ion-wrench" icon-off="ion-wrench">
       <ion-content scroll="true" scrollbar-y="true" has-bouncing="false">
         <br><br>
-        <button class="button" ng-click="clearSettingsClick()">Clear Settings</button>
+        <button class="button" ng-click="clearLocalStorageClick()">Clear Local Storage</button>
       </ion-content>
     </ion-tab> 
     <ion-tab title="Texts" icon-on="ion-document-text" icon-off="ion-document-text">
