--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -65,6 +65,8 @@
       getnextitem="getNextImage(currentImage)"
       getpreviousitem="getPreviousImage(currentImage)"
       currentitem="$parent.$parent.currentImage"
+      swipedleft="imageSwiped()"
+      swipedright="imageSwiped()"
       width="deviceWidth"
       height="slideImageHeight">
       <!-- slide -->
