feat(mumpetname): rename motherName setting to mumPetName

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -5,7 +5,7 @@
         <label class="inputLabel">Refer To Mum As</label>
         <div class="motherNameSelect item item-input item-select">
           <label> </label>
-          <select ng-options="motherName for motherName in motherNames" ng-model="settings.motherName"></select>
+          <select ng-options="mumPetName for mumPetName in mumPetNames" ng-model="settings.mumPetName"></select>
         </div>
       </div>
       <gw-mob-contact
