feat(dropdown): persist mum pet name to settings

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -5,7 +5,7 @@
         <label class="inputLabel">Refer To Mum As</label>
         <div 
           dropdown-select="mumPetNames" 
-          dropdown-model="ddSelectSelected"
+          dropdown-model="mumPetName"
           dropdown-item-label="text">
         </div>
         <!---
