--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.ionicframework.gwmobilehellomum989200" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.ionicframework.gwmobilehellomother" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <feature name="Keyboard">
         <param name="android-package" value="com.ionic.keyboard.IonicKeyboard" />
@@ -25,7 +25,7 @@
     </feature>
     <name>HelloMother</name>
     <description>
-    GhostWording Hello Mum Mobile App
+    GhostWording Hello Mother Mobile App
   </description>
     <author email="hi@ionicframework" href="http://ionicframework.com/">
     GhostWording Ltd
