feat(hitareas): increase hit area on settings button

--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -107,17 +107,21 @@
   color: #339ee6;
   opacity: 1;
 }
-.textSelect .settingsButton {
+.textSelect .settingsButtonHit {
   position: absolute;
-  top: 30px;
-  left: 15px;
   z-index: 200;
+  padding-top: 30px;
+  padding-bottom: 50px;
+  padding-left: 15px;
+  padding-right: 50px;
+}
+.textSelect .settingsButton {
   width: 40px;
   height: 40px;
   line-height: 40px;
   font-size: 25px;
   color: rgba(255,255,255,0.7);
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.2);
   border-radius: 3px;
   vertical-align: center;
   text-align: center;
