--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -56,7 +56,9 @@
   </div>
   <ion-content scroll="true" scrollbar-y="false" has-bouncing="false" style="width:{{windowWidth}}px">
     <!-- settings button -->
-    <div class="settingsButton icon ion-gear-a" ng-click="settingsButtonClick()"></div>
+    <div class="settingsButtonHit" ng-click="settingsButtonClick()">
+      <div class="settingsButton icon ion-gear-a"></div>
+    </div>
     <!-- debug button -->
     <div class="debugButton" ng-click="debugButtonClick()"></div>
     <!-- swipe arrows -->
