--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -140,18 +140,23 @@
   bottom: 0px;
   width: 100%;
   z-index: 200;
-  padding-top: 50px;
-  padding-bottom: 15px;
+  padding-top: 10px;
   padding-left: 15px;
   padding-right: 15px;
   background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
   pointer-events: none;
 }
-.textSelect .bottomBar .sendButton {
-  flex: 1;
+.textSelect .bottomBar .sendButtonHit {
+  padding-top: 40px;
+  padding-bottom: 15px;
   margin-left: 50px;
   margin-right: 50px;
+  flex: 1;
+  pointer-events: all;
+}
+.textSelect .bottomBar .sendButton {
   border-radius: 3px;
+  width: 100%;
   background-color: #339ee6;
   height: 40px;
   line-height: 40px;
@@ -159,7 +164,6 @@
   font-size: 1.25em;
   text-align: center;
   vertical-align: center;
-  pointer-events: all;
   font-family: 'notoserif-italic';
 }
 .textSelect .bottomBar .likeDislikeButton {
