--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -189,14 +189,19 @@
   background-color: white;
   border-radius: 8px;
 }
-.textSelect .popupButton {
+.textSelect .popupButtonHit {
   display: block;
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.textSelect .popupButton {
   border-radius: 3px;
   background-color: #339ee6;
-  width: 200px;
+  width: 100%;
   height: 40px;
   line-height: 40px;
   font-size: 15px;
@@ -206,7 +211,7 @@
   font-family: 'notoserif-italic';
 }
 .textSelect .pad {
-  margin-top: 50px;
+  margin-top: 30px;
 }
 .textSelect .contact {
   padding: 40px;
