--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -7,14 +7,22 @@
       sendfacebook="sendFacebook()"
       showsendfacebook="false">
     </gw-mob-send>
-    <div class="popupButton pad" ng-click="sendCancelButtonClick()">Cancel</div>
+    <div class="popupButtonHit pad">
+      <div class="popupButton" ng-click="sendCancelButtonClick()">Cancel</div>
+    </div>
   </gw-mob-popup>
   <!-- sms image popup -->
   <gw-mob-popup class="textPopup" ng-if="smsImagePopupVisible">
     <div>SMS won't send the image</div>
-    <div class="popupButton pad" ng-click="sendSMS()">Send Text Only</div>
-    <div class="popupButton" ng-click="sendEmail()">Send by Email</div>
-    <div class="popupButton" ng-click="sendCancelButtonClick()">Cancel</div>
+    <div class="popupButtonHit pad" ng-click="sendSMS()">
+      <div class="popupButton">Send Text Only</div>
+    </div>
+    <div class="popupButtonHit" ng-click="sendEmail()">
+      <div class="popupButton" >Send by Email</div>
+    </div>
+    <div class="popupButtonHit" ng-click="sendCancelButtonClick()">
+      <div class="popupButton">Cancel</div>
+    </div>
   </gw-mob-popup>
   <!-- sent popup -->
   <gw-mob-popup class="textPopup" ng-if="sentPopupVisible">
