feat(hitareas): increase hit area on send cancel button

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -7,8 +7,8 @@
       sendfacebook="sendFacebook()"
       showsendfacebook="false">
     </gw-mob-send>
-    <div class="popupButtonHit pad">
-      <div class="popupButton" ng-click="sendCancelButtonClick()">Cancel</div>
+    <div class="popupButtonHit pad" ng-click="sendCancelButtonClick()">
+      <div class="popupButton">Cancel</div>
     </div>
   </gw-mob-popup>
   <!-- sms image popup -->
