--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -73,7 +73,7 @@
       </div>
     </ion-tab>
   </ion-tabs>
-  <div class="doneButtonContainer" style="top:{{deviceHeight-60}}px">
-    <div class="doneButton" ng-click="close()">Done</div>
+  <div class="doneButtonHit" style="top:{{deviceHeight-60}}px" ng-click="close()">
+    <div class="doneButton">Done</div>
   </div>
 </div>
