--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -58,6 +58,8 @@
   left: 0px;
   width: 100%;
   height: 100%;
+  padding-left: 50px;
+  padding-right: 50px;
   color: white;
   font-family: 'notoserif-italic';
   font-size: 1.5em;
